force-app/main/default/objects/User/fields/BypassApexTriggers__c.field-meta.xml
<CustomField>
    <fullName>BypassApexTriggers__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BypassApexTriggers</label>
    <type>Checkbox</type>
</CustomField>