force-app/main/default/objects/User/fields/ELLISPHERE__AccountsSync__c.field-meta.xml
<CustomField>
    <fullName>ELLISPHERE__AccountsSync__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Synchronisation comptes</label>
    <type>Checkbox</type>
</CustomField>