force-app/main/default/objects/User/fields/ELLISPHERE__Elli_EVT_104__c.field-meta.xml
<CustomField>
    <fullName>ELLISPHERE__Elli_EVT_104__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Abonnement aux alertes Ellisphere de type Publication au BODACC.</description>
    <inlineHelpText>Subscription to Ellisphere alerts such as BODACC Publication.</inlineHelpText>
    <label>Publication au BODACC</label>
    <type>Checkbox</type>
</CustomField>