force-app/main/default/objects/User/fields/ELLISPHERE__Elli_EVT_13__c.field-meta.xml
<CustomField>
    <fullName>ELLISPHERE__Elli_EVT_13__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Abonnement aux alertes Ellisphere de type Publication Presse.</description>
    <inlineHelpText>Subscription to Ellisphere alerts such as Press Publication.</inlineHelpText>
    <label>Publication Presse</label>
    <type>Checkbox</type>
</CustomField>