force-app/main/default/objects/User/fields/ELLISPHERE__Elli_EVT_14__c.field-meta.xml
<CustomField>
    <fullName>ELLISPHERE__Elli_EVT_14__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Abonnement aux alertes Ellisphere de type Modification d&apos;un dirigeant statutaire.</description>
    <inlineHelpText>Subscription to Ellisphere alerts such as Modification of a statutory officer.</inlineHelpText>
    <label>Modification d&apos;un dirigeant statutaire</label>
    <type>Checkbox</type>
</CustomField>