force-app/main/default/objects/User/fields/ELLISPHERE__International_Import_Update__c.field-meta.xml
<CustomField>
    <fullName>ELLISPHERE__International_Import_Update__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Import/Actualisation international</label>
    <type>Checkbox</type>
</CustomField>