force-app/main/default/objects/User/fields/ELLISPHERE__Leads_import__c.field-meta.xml
<CustomField>
    <fullName>ELLISPHERE__Leads_import__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Import pistes</label>
    <type>Checkbox</type>
</CustomField>