force-app/main/default/objects/User/fields/ELLISPHERE__LeadsSync__c.field-meta.xml
<CustomField>
    <fullName>ELLISPHERE__LeadsSync__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Synchronisation pistes</label>
    <type>Checkbox</type>
</CustomField>