force-app/main/default/objects/User/fields/NMatricule__c.field-meta.xml
<CustomField>
    <fullName>NMatricule__c</fullName>
    <externalId>true</externalId>
    <label>N° Matricule</label>
    <length>25</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>