force-app/main/default/objects/User/fields/Technicien__c.field-meta.xml
<CustomField>
    <fullName>Technicien__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Permet d&apos;indiquer que l&apos;utilisateur sera soumis aux règles de validation de l&apos;intervention.</description>
    <inlineHelpText>Permet d&apos;indiquer que l&apos;utilisateur sera soumis aux règles de validation de l&apos;intervention.</inlineHelpText>
    <label>Technicien</label>
    <type>Checkbox</type>
</CustomField>