force-app/main/default/objects/User/fields/USER_AgenceRegionaleBW__c.field-meta.xml
<CustomField>
    <fullName>USER_AgenceRegionaleBW__c</fullName>
    <label>Agence régionale BW</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>USER_EntiteBW__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>AgenceRegionaleBW</valueSetName>
    </valueSet>
</CustomField>