force-app/main/default/objects/User/fields/USER_AutorisationDAF__c.field-meta.xml
<CustomField>
    <fullName>USER_AutorisationDAF__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Cette case permet de signaler que l&apos;utilisateur ne sera pas soumis aux règles de duplication liées aux comptes.</description>
    <inlineHelpText>Cette case permet de signaler que l&apos;utilisateur ne sera pas soumis aux règles de duplication liées aux comptes.</inlineHelpText>
    <label>Autorisation DAF</label>
    <type>Checkbox</type>
</CustomField>