force-app/main/default/objects/User/fields/USER_ByPassProcessBuilder__c.field-meta.xml
<CustomField>
    <fullName>USER_ByPassProcessBuilder__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ByPass Process Builder</label>
    <type>Checkbox</type>
</CustomField>