force-app/main/default/objects/User/fields/USER_ByPassRegleDuplication__c.field-meta.xml
<CustomField>
    <fullName>USER_ByPassRegleDuplication__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ByPass Règle de duplication</label>
    <type>Checkbox</type>
</CustomField>