force-app/main/default/objects/User/fields/USER_ByPassRegleValidation__c.field-meta.xml
<CustomField>
    <fullName>USER_ByPassRegleValidation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ByPass Règle de validation</label>
    <type>Checkbox</type>
</CustomField>