force-app/main/default/objects/User/fields/USER_ByPassRegleWorkflow__c.field-meta.xml
<CustomField>
    <fullName>USER_ByPassRegleWorkflow__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ByPass Règle de workflow</label>
    <type>Checkbox</type>
</CustomField>