force-app/main/default/objects/User/fields/USER_EntiteBW__c.field-meta.xml
<CustomField>
    <fullName>USER_EntiteBW__c</fullName>
    <label>Entité BW</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>EntiteBW</valueSetName>
    </valueSet>
</CustomField>