force-app/main/default/objects/User/fields/USER_SecteurCommercial__c.field-meta.xml
<CustomField>
    <fullName>USER_SecteurCommercial__c</fullName>
    <label>Secteur Commercial</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>USER_AgenceRegionaleBW__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>SecteurCommercial</valueSetName>
    </valueSet>
</CustomField>