force-app/main/default/objects/User/fields/USER_Statut__c.field-meta.xml
<CustomField>
    <fullName>USER_Statut__c</fullName>
    <label>Statut</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Non cadre</fullName>
            </value>
            <value>
                <fullName>Cadre</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>