force-app/main/default/objects/User/listViews/ALL.listView-meta.xml
<ListView>
    <fullName>ALL</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>CORE.USERS.EMAIL</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>NMatricule__c</columns>
    <filterScope>Everything</filterScope>
    <label>ALL</label>
    <language>fr</language>
</ListView>