force-app/main/default/objects/User/listViews/ALL_Inactifs.listView-meta.xml
<ListView>
    <fullName>ALL_Inactifs</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>CORE.USERS.EMAIL</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>NMatricule__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.ACTIVE</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>ALL_Inactifs</label>
    <language>fr</language>
    <sharedTo>
        <group>Administrateur</group>
    </sharedTo>
</ListView>