force-app/main/default/objects/User/listViews/FR_ALL_USERS.listView-meta.xml
<ListView>
    <fullName>FR_ALL_USERS</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.EMAIL</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>NMatricule__c</columns>
    <columns>CORE.USERS.COMMUNITY_NICKNAME</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.COMPANY_NAME</columns>
    <columns>CORE.USERS.COUNTRY_CODE</columns>
    <columns>CORE.USERS.STATE_CODE</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>LANGUAGE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>USER_EntiteBW__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>CORE.USERS.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>FR_All Users</label>
    <language>fr</language>
    <sharedTo>
        <group>Administrateur</group>
    </sharedTo>
</ListView>