force-app/main/default/objects/User/listViews/FR_Commercial.listView-meta.xml
<ListView>
    <fullName>FR_Commercial</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>CORE.USERS.EMAIL</columns>
    <columns>NMatricule__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.PROFILE.NAME</field>
        <operation>equals</operation>
        <value>CommercialBW-JL</value>
    </filters>
    <filters>
        <field>USER_EntiteBW__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>CORE.USERS.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>FR_Commercial-JL</label>
    <language>fr</language>
    <sharedTo>
        <group>Administrateur</group>
    </sharedTo>
</ListView>