force-app/main/default/objects/User/listViews/IT_BackOffice_JL.listView-meta.xml
<ListView>
    <fullName>IT_BackOffice_JL</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>CORE.USERS.EMAIL</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.PROFILE.NAME</field>
        <operation>equals</operation>
        <value>BackOfficeBW-JL</value>
    </filters>
    <filters>
        <field>USER_EntiteBW__c</field>
        <operation>equals</operation>
        <value>3</value>
    </filters>
    <filters>
        <field>CORE.USERS.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>IT_BackOffice-JL</label>
    <language>fr</language>
    <sharedTo>
        <group>Administrateur</group>
    </sharedTo>
</ListView>